--- a/porfolio.html
+++ b/porfolio.html
@@ -35,6 +35,36 @@
         <li><input type="button"
             value="Маркетинг"></li>
      </ul>
+
+     <ul>
+         <li><img src="./images/notebook.jpg" width="370" height="294" alt="ноутбук">
+        <h3>Технокряк</h3> <p>Веб-сайт</p> </li>
+         <li><img src="./images/basketball-player.jpg" width="370" height="294" alt="Постер New Orlean vs Golden Star">
+        <h3>Постер New Orlean vs Golden Star</h3> <p>Дизайн</p> </li>
+         <li><img src="./images/seafood.jpg" width="370" height="294" alt="Ресторан Seafood на фоне рыбы">
+        <h3>Ресторан Seafood</h3> <p>Приложение</p> </li>
+         <li><img src="./images/headphones.jpg" width="370" height="294" alt="наушники">
+        <h3>Проект Prime</h3> <p>Маркетинг</p> </li>
+         <li><img src="./images/box.jpg" width="370" height="294" alt="два ящика">
+        <h3>Проект Boxes</h3> <p>Приложение</p> </li>
+         <li><img src="./images/monitor.jpg" width="370" height="294" alt="монитор">
+        <h3>Inspiration has no Borders</h3> <p>Веб-сайт</p> </li>
+         <li><img src="./images/book.jpg" width="370" height="294" alt="книга">
+        <h3>Издание Limited Edition</h3> <p>Дизайн</p> </li>
+         <li><img src="./images/label-tag.jpg" width="370" height="294" alt="бирка">
+        <h3>Дизайн</h3> <p>Маркетинг</p> </li>
+         <li><img src="./images/notebook1.jpg" width="370" height="294" alt="работа за ноутбуком">
+        <h3>Growing Business</h3> <p>Приложение</p> </li>
+     </ul>
  </section></main>
+
+ <footer>
+    <a href=""> WebStudio<br></a>
+<address>
+<p> г. Киев, пр-т Леси Украинки, 26</p> <br> <a href=""> info@example.com</a> <br> <a href=""> +38 099 111 11 11</a>
+</address>
+
+ </footer>
+
 </body>
 </html>
