--- a/porfolio.html
+++ b/porfolio.html
@@ -22,7 +22,7 @@
             <span class="web">Web</span>Studio</a>
             <ul class="style-nav">
                 <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./porfolio.html" class="link"> Портфолио</a></li>
+                <li><a href="./porfolio.html" class="link-main"> Портфолио</a></li>
                 <li> <a href="" class="link"> Контакты</a></li>
             </ul>
      </nav>
