--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <nav><a href="" class="logo">
         <span class="web">Web</span>Studio</a>
    <ul class="style-nav">
-    <li><a href="./index.html" class="link">Студия</a></li>
+    <li><a href="./index.html" class="link-main">Студия</a></li>
     <li><a href="./porfolio.html" class="link"> Портфолио</a></li>
     <li> <a href="" class="link"> Контакты</a></li>
 </ul>
