--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
         <a href="" class="logodown-port">
             <span class="web">Web</span>Studio</a>
 <address>
-<p class="address"> г. Киев, пр-т Леси Украинки, 26</p> <br>
- <a href="" class="linknav"> info@example.com</a> <br> 
- <a href="" class="linknav"> +38 099 111 11 11</a>
+    <ul>
+<li><p class="address"> г. Киев, пр-т Леси Украинки, 26</p></li> <br>
+ <li><a href="" class="linknav"> info@example.com</a></li> <br> 
+<li> <a href="" class="linknav"> +38 099 111 11 11</a></li>
+</ul>
 </address>
 
     </footer>
