--- a/porfolio.html
+++ b/porfolio.html
@@ -14,6 +14,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    
     <body class="body">
     <header>  
         <nav><a href="" class="logo">
@@ -80,9 +81,11 @@ description">Приложение</p> </li>
     <a href="" class="logodown-port">
         <span class="web">Web</span>Studio</a>
 <address>
-<p class="address-port"> г. Киев, пр-т Леси Украинки, 26</p> <br> 
-<a href="" class="linknav-port"> info@example.com</a> <br> 
-<a href="" class="linknav-port"> +38 099 111 11 11</a>
+    <ul>
+<li><p class="address-port"> г. Киев, пр-т Леси Украинки, 26</p> <br></li> 
+<li><a href="" class="linknav-port"> info@example.com</a> <br></li> 
+<li><a href="" class="linknav-port"> +38 099 111 11 11</a></li>
+</ul>
 </address>
 
  </footer>
